Release Notes
=============
Date:   02/08/2025
Name:   Jeremy
Release:
1. Updated export functionality to match import template column order and headers

Release Notes
=============
Date:   23/07/2025
Name:   Kenneth Ng
Release:
1. Coding basic daily timetable generation logic
2. Updated TIMETABLE DB to add in end_time

Changes:
files\timetable.db
main.py
windows\timetable_daily.py
=============
Date:   18/07/2025
Name:   Kenneth Ng
Release:
1. Added basic coding scripts and structure for timetable generation

Changes:
files\timetable.db
main.py
windows\timetable_daily.py
windows\timetable_dependency.py
windows\timetable_weekly.py
=============
Date:   12/07/2025
Name:   Jeremy
Release:
1. Added Export Schedule button and export functionality to Excel/CSV
2. Added unit tests for import and export features
3. Created tests directory

Changes:
main.py
tests/test_browse_files.py
tests/test_export_schedule.py
=============
Date:   11/07/2025
Name:   Kenneth Ng
Release:
1. Added support for csv files when importing template

Changes:
files\timetable.db
main.py
=============
Date:   11/07/2025
Name:   Kenneth Ng
Release:
1. Removed unnecessary UI elements from original source
2. Added Import Template button and feature to load Excel file into DB

Changes:
files\timetable.db
main.py
=============